@@ -23,7 +23,7 @@ Dist::Zilla::Plugin::Manifest = 0
 Dist::Zilla::Plugin::GenerateFile::ShareDir = 0
 Dist::Zilla::Plugin::Test::Compile = 2.039
 Dist::Zilla::Plugin::Test::NoTabs = 0.08
-Dist::Zilla::Plugin::EOLTests = 0
+Dist::Zilla::Plugin::Test::EOL = 0.14
 Dist::Zilla::Plugin::MetaTests = 0
 Dist::Zilla::Plugin::Test::CPAN::Changes = 0.008
 Dist::Zilla::Plugin::Test::ChangesHasContent = 0
@@ -165,7 +165,6 @@ Test::Mojibake = 0
 -relationship = requires
 Test::Spelling = 0.19
 Pod::Wordlist = 1.09
-Test::EOL = 0
 Test::MinimumVersion = 0
 Test::Pod::No404s = 0
 Test::Mojibake = 0
